# qt_double_spinbox_heavy_computation

./: CMakeLists.txt
src/: CMakeLists.txt  qt_double_spinbox_heavy_computation.cpp  qt_double_spinbox_heavy_computation_widget.cpp  qt_double_spinbox_heavy_computation_widget.h  qt_double_spinbox_heavy_computation_widget.ui
